--- a/PartyTracker/Base.lproj/Main.storyboard
+++ b/PartyTracker/Base.lproj/Main.storyboard
@@ -212,14 +212,21 @@
             </objects>
             <point key="canvasLocation" x="1007" y="-1216"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Guest Details-->
         <scene sceneID="naJ-Ra-X7U">
             <objects>
-                <tableViewController id="wct-Yu-lJa" sceneMemberID="viewController">
+                <tableViewController title="Guest Details" id="wct-Yu-lJa" customClass="GuestTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uQf-pP-3bf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <label key="tableFooterView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GuestName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O1I-yR-DFI">
+                            <rect key="frame" x="0.0" y="-21" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="Pdh-JX-3aY" style="IBUITableViewCellStyleDefault" id="gh9-UB-Dlb">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -242,6 +249,9 @@
                         </connections>
                     </tableView>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="labelGuest" destination="O1I-yR-DFI" id="F8c-Es-yys"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fuf-87-cky" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
