--- a/PartyTracker/Base.lproj/Main.storyboard
+++ b/PartyTracker/Base.lproj/Main.storyboard
@@ -49,6 +49,82 @@
             </objects>
             <point key="canvasLocation" x="466" y="-1216"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="FlO-hi-9ya">
+            <objects>
+                <tableViewController id="Lct-Ki-T5a" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="iSY-LN-Fuk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="seZ-1x-QcS">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="seZ-1x-QcS" id="r1O-no-ukg">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Sx-s7-q6k">
+                                            <rect key="frame" x="8" y="8" width="113" height="83"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="83" id="D4e-bw-eK7"/>
+                                                <constraint firstAttribute="width" constant="113" id="Zix-HY-et4"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0D2-b5-d3H">
+                                            <rect key="frame" x="191" y="0.0" width="92" height="34"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="92" id="gcb-qv-6TC"/>
+                                                <constraint firstAttribute="height" constant="34" id="hex-OC-GAW"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEV-Ne-M8K">
+                                            <rect key="frame" x="144" y="64" width="67" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="3c1-Hu-zKe"/>
+                                                <constraint firstAttribute="width" constant="67" id="68z-zN-gbK"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssF-5Z-arv">
+                                            <rect key="frame" x="306" y="64" width="61" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="61" id="0X9-dv-xNT"/>
+                                                <constraint firstAttribute="height" constant="25" id="3he-VJ-0R7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="1Sx-s7-q6k" firstAttribute="leading" secondItem="r1O-no-ukg" secondAttribute="leading" constant="8" id="5wb-6D-ogJ"/>
+                                        <constraint firstItem="ssF-5Z-arv" firstAttribute="top" secondItem="r1O-no-ukg" secondAttribute="top" constant="64" id="9SJ-Z3-txa"/>
+                                        <constraint firstItem="ssF-5Z-arv" firstAttribute="leading" secondItem="r1O-no-ukg" secondAttribute="leading" constant="306" id="ECs-sd-DbZ"/>
+                                        <constraint firstItem="dEV-Ne-M8K" firstAttribute="top" secondItem="r1O-no-ukg" secondAttribute="top" constant="64" id="Z4l-KL-0j9"/>
+                                        <constraint firstItem="1Sx-s7-q6k" firstAttribute="top" secondItem="r1O-no-ukg" secondAttribute="top" constant="8" id="a2I-7S-gfG"/>
+                                        <constraint firstItem="dEV-Ne-M8K" firstAttribute="leading" secondItem="r1O-no-ukg" secondAttribute="leading" constant="144" id="bg7-8d-M3Z"/>
+                                        <constraint firstItem="0D2-b5-d3H" firstAttribute="leading" secondItem="r1O-no-ukg" secondAttribute="leading" constant="191" id="iNy-zP-AHd"/>
+                                        <constraint firstItem="0D2-b5-d3H" firstAttribute="top" secondItem="r1O-no-ukg" secondAttribute="top" id="nG5-VO-Gv9"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Lct-Ki-T5a" id="5N6-2q-Pkm"/>
+                            <outlet property="delegate" destination="Lct-Ki-T5a" id="fKe-FZ-9IJ"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qCW-bW-ESb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="466" y="-423"/>
+        </scene>
         <!--Party Details-->
         <scene sceneID="6gf-nf-WAu">
             <objects>
@@ -239,7 +315,7 @@
                                     <constraint firstAttribute="width" constant="280" id="lqw-RQ-q6K"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bOA-La-K6b" customClass="FBProfilePictureView">
@@ -266,7 +342,7 @@
                                     <constraint firstAttribute="height" constant="25" id="uBz-iw-DS7"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -309,7 +385,7 @@
                             <rect key="frame" x="0.0" y="-21" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <prototypes>
@@ -321,7 +397,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Pdh-JX-3aY">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
